--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
@@ -185,20 +185,22 @@
 								</tr>
 
 								<tr>
-									<td><encounterDate id="encounter-date" showTime="true" /><br />
-									Revisit this year? <obs conceptId="164142AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" answerSeparator="&lt;br/&gt;" />									</td>
+									<td><encounterDate id="encounter-date" showTime="true" /><br /><br />
+									Revisit this year? <obs conceptId="164142AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" />									</td>
 									<td><div id="age" class="value"></div></td>
 									<td>  <obs conceptId="160908AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="160909AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160910AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,127778AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Green,Yellow,Red" answerSeparator="&lt;br/&gt;" /></td>
-									<td><obs conceptId="1151AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="5526AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1595AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,6046AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Exclusive Breastfeeding(EBF),Exclusive Replacement(ERF),Mixed Feeding(MF)" answerSeparator="&lt;br/&gt;" /><br />
+									<td><obs conceptId="1151AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="5526AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1595AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,6046AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Exclusive Breastfeeding(EBF),Exclusive Replacement(ERF),Mixed Feeding(MF)" answerSeparator="&lt;br/&gt;" /><br /><br />
 									Exclusive breastfeeding 0-6 Months <obs conceptId="5526AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" style="radio"/><br />
 									Stunted? <obs conceptId="164088AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="164085AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" style="radio"/>									</td>
 									<td><obs conceptId="966AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="80586AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="" style="checkbox" /></td>
 									<td><obs conceptId="1109AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="105281AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="" style="checkbox" /></td>
 									<td><obs conceptId="1193AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="461AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="" style="checkbox" /></td>
 									<td><obs conceptId="1659AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1660AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,142177AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1661AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1662AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1679AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160737AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="No signs,Suspect,Confirmed,TB Rx,INH,Not done" answerSeparator="&lt;br/&gt;" /></td>
-									<td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" /><br />
-									Referral from: <obs conceptId="160481AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1537AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Other Health facility,Community Unit" answerSeparator="&lt;br/&gt;" /><br />
-									Referral to: <obs conceptId="163145AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1537AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Other Health facility,Community Unit" answerSeparator="&lt;br/&gt;" />
+									<td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" /><br /><br />
+									Referral from: <br />
+									<obs conceptId="160481AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1537AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Other Health facility,Community Unit" answerSeparator="&lt;br/&gt;" /><br />
+									Referral to:<br />
+									<obs conceptId="163145AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1537AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Other Health facility,Community Unit" answerSeparator="&lt;br/&gt;" />
 									</td>
 								</tr>
 							</tbody>
@@ -212,13 +214,13 @@
 					<td colspan="2">
 						<table width="100%">
 							<tr>
-								<th colspan="2">Development Milestones by Age</th>
+								<th>Development Milestones by Age</th>
 								<th>Achieving Milestones?</th>
 							    <th>Weight Category </th>
 							    <th>Type of followup </th>
 							</tr>
 							<tr>
-								<td colspan="2">
+								<td>
 									<div style="float: left; padding-right: 30px">
 										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162056AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Social Smile" /><br />
 										<obs conceptId="162069AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox" answerConceptId="162057AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Head Holding/Control" /><br />
@@ -353,10 +355,8 @@
 									</tr>
 								</obsgroup>
 									<tr>
-										<td></td>
-										<td>Vitamin A<obs conceptId="161534AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" style="radio" /></td>
-										<td></td>
-										<td></td>
+										<td colspan="4">Vitamin A
+									    <obs conceptId="161534AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" style="radio" /></td>
 									</tr>
 									<tr>
 									  <td colspan="4">Any disability? <obs conceptId="162558AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" style="radio" /></td>
@@ -374,13 +374,17 @@
 							<th>Physical features</th>
 						  </tr>
 						  <tr>
-							<td><obs conceptId="159395AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" cols="40" rows="10"/></td>
-							<td>
-								Counseled On? <obs conceptId="1379AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1914AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1380AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="HIV,Nutrition" answerSeparator="&lt;br/&gt;" /><br />
-								Supplemented with MNPS 6-23 Months? <obs conceptId="5484AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="161649AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" answerSeparator="&lt;br/&gt;" />
+							<td valign="top"><obs conceptId="159395AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" cols="40" rows="10"/></td>
+							<td valign="top">
+								Counseled On? 
+								  <obs conceptId="1379AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1914AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1380AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="HIV,Nutrition" /><br />
+								Supplemented with MNPS 6-23 Months? 
+								<obs conceptId="5484AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="161649AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No"/>
 							</td>
-							<td>
-							<div style="color:#ffffff;background-color:#696969">Colouration...,Ears...,Mouth..., Chest...,Heart...,Abdomen..., Umblical Cord..,Spine.., Arms &amp; feet...,Genitlia..., Anus...,Congenital abnomalities... </div>
+							<td valign="top">
+							<div style="color:#ffffff;background-color:#a9a8a8">Colouration...,Ears...,Mouth..., Chest...,<br />
+							  Heart...,Abdomen..., Umblical Cord..,Spine..,<br /> 
+							  Arms &amp; feet...,Genitlia..., Anus...,Congenital abnomalities... </div>
 							<obs conceptId="1391AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" cols="40" rows="10"/></td>
 						  </tr>
 						</table>
