--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
@@ -25,6 +25,33 @@
 		text-align: left;
 		}
 
+		.alert-box {
+			color:#555;
+			border-radius:10px;
+			font-family:Tahoma,Geneva,Arial,sans-serif;font-size:11px;
+			padding:10px 36px;
+			margin:10px;
+		}
+		.alert-box span {
+			font-weight:bold;
+			text-transform:uppercase;
+		}
+		.error {
+			background:#ffecec url('../../images/error.png') no-repeat 10px 50%;
+			border:1px solid #f5aca6;
+		}
+		.success {
+			background:#e9ffd9 url('../../images/success.png') no-repeat 10px 50%;
+			border:1px solid #a6ca8a;
+		}
+		.warning {
+			background:#fff8c4 url('../../images/warning.png') no-repeat 10px 50%;
+			border:1px solid #f2c779;
+		}
+		.notice {
+			background:#e3f7fc url('../../images/notice.png') no-repeat 10px 50%;
+			border:1px solid #8ed9f6;
+		}
 	</style>
 	<script type="text/javascript">
 
@@ -382,7 +409,7 @@
 								<obs conceptId="5484AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="161649AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No"/>
 							</td>
 							<td valign="top">
-							<div style="color:#ffffff;background-color:#a9a8a8">Colouration...,Ears...,Mouth..., Chest...,<br />
+							<div class="alert-box notice">Colouration...,Ears...,Mouth..., Chest...,<br />
 							  Heart...,Abdomen..., Umblical Cord..,Spine..,<br /> 
 							  Arms &amp; feet...,Genitlia..., Anus...,Congenital abnomalities... </div>
 							<obs conceptId="1391AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" cols="40" rows="10"/></td>
